@@ -167,13 +167,13 @@
       "type": 0,
       "variance": 20
     },
-    "description": "An old key that the Village Headman asked\nyou to find. It's oddly shaped.",
+    "description": "An old key found in a crate in the Village Headman's\nhouse. It's oddly shaped. It feels out of this world...",
     "effects": [],
     "hitType": 0,
     "iconIndex": 240,
-    "itypeId": 2,
+    "itypeId": 1,
     "name": "Old Key",
-    "note": "<Cannot Discard>",
+    "note": "<Menu Category: Memorabilia>\n<Cannot Discard>",
     "occasion": 3,
     "price": 0,
     "repeats": 1,
