@@ -29,7 +29,7 @@ Additions:
    > Resurgence: Magic skill learned at level 25.
   ~ Player 4, 0 skills:
    > 
- - Added 37 new items:
+ - Added 38 new items:
   ~ 6 recovery items:
    > Large Potion
    > Large Elixir
@@ -62,11 +62,12 @@ Additions:
    > MRG Scroll
    > EXR Scroll
    > MCR Scroll
-  ~ 5 miscellaneous items:
+  ~ 6 miscellaneous items:
    > Golden Tablet Piece (Left)
    > Golden Tablet Piece (Right)
    > Golden Tablet
    > Tellurium Pickaxe
+   > Old Key
    > Andrew's Ancient Crystal of The Trail's Amazing History
  - Added 54 new equipment items:
   ~ 10 weapons:
